# Geochemistrypi-chemical-modeling

./: README.md  pyproject.toml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
src/geochemistrypi/: cli.py  fsolve.py  root.py
tests/: test_fsolve.py  test_root.py
